# GivAPI

./: README.md  current.py  givapi.py  pyproject.toml  setup.py
.github/workflows/: install_poetry.yml  python-publish.yml
GivAPI/: __init__.py  pyproject.toml  setup.py
