[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "GivAPI"
version = "0.1.1"
description = "Pulls current data from the GivEnergy API"
authors = ["Wilbur Williams <notanemailaddress@wilburwilliams.uk>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
